webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
  #使用ingress的名字
  ingressClassName: nginx
  #和nginx的配置文件类似
  rules:
    #host是go.webook.com的时候，命中这条
    - host: go.webook.com
      http:

        paths:
          # 请求路径的前缀是/的时候
          # 将流量转发过去后面的webook服务上
          # 端口是80
          - backend: #backend指向后端的service
              #对应k8s-webook-service.yaml中的metadata的name
              service:
                name: webook
                port:
                  number: 80
            pathType: Prefix
            path: /
